# battery_qi_plus_fastapi

./: Dockerfile  README.md  docker_compose.yml  main.py  pyproject.toml  setup_fastapi_project.py
ai/ai_model/: aspp.py
ai/ai_model/backbone/: __init__.py  drn.py
ai/dataloaders/: __init__.py
app/: main.py
app/ai/: mypath.py
app/ai/ai_model/: aspp.py  decoder.py  deeplab.py  model_loader.py
app/ai/dataloaders/: __init__.py  custom_transforms.py  utils.py
app/ai/dataloaders/datasets/: simple.py
app/config/: settings.py
app/database/: db_connection.py
app/routers/: predict.py  upload.py
app/services/: file_manager.py  inference.py
config/: settings.py
database/: db_connection.py
routers/: predict.py  shutdown.py  status.py  upload.py
services/: file_manager.py  folder_watcher.py  inference.py  model_loader.py
utils/: image_processing.py  json_handler.py
