[project]
name = "battery-qi-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Polar-Bear-Poby",email = "primekk3502@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "opencv-python-headless (>=4.11.0.86,<5.0.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]